--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,3 +15,17 @@ button {
 	width: 40px;
 	margin: 15px auto;
 }
+
+.container {
+	width: 800px;
+	display: block;
+}
+
+h1 {
+	text-align: right;
+    margin: 20px;
+}
+
+.current-price {
+	display: block;
+}
